# MVC_PROJECT_FLASK

./: .gitignore  .pylintrc  README.md  pyproject.toml  run.py
init/: schema.sql
src/controllers/: person_creator_controller.py  person_finder_controller.py  pet_deleter_controller.py  pet_lister_controller.py
src/controllers/interfaces/: person_creator_controller.py  person_finder_controller.py  pet_deleter_controller.py  pet_lister_controller.py
src/main/routes/: person_routes.py  pets_routes.py
src/main/server/: server.py
src/models/sqlite/entities/: people.py
src/models/sqlite/interfaces/: people_repository.py  pets_repository.py
src/models/sqlite/repositories/: people_repository.py  pets_repository.py  pets_repository_test.py  repositories_test.py
src/models/sqlite/settings/: base.py  connection.py  connection_teste.py
src/views/: person_creator_view.py  person_finder_view.py  pet_deleter_view.py  pet_lister_view.py
src/views/http_types/: http_request.py
src/views/interfaces/: view_interface.py
