[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["itallominatti <itallominatti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pylint = "^3.3.2"
sqlalchemy = "^2.0.36"
pytest = "^8.3.4"
black = "^24.10.0"
mock-alchemy = "^0.2.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
